apps/airlock/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlock
  labels:
    app: airlock
  annotations:
    argocd.argoproj.io/refresh: hard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlock
  template:
    metadata:
      labels:
        app: airlock
    spec:
      containers:
        - name: airlock
          image: ghcr.io/agustinbravop/airlock
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
