apps/airlock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlock
spec:
  selector:
    app: airlock
  ports:
    - port: 80
      targetPort: 8000
      name: http
